# tauri-plugin-feature-requests

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: claude-implement.yml
src/: credentials.rs  generator.rs  github.rs  lib.rs  repos.rs
