[package]
name = "tauri-plugin-feature-requests"
version = "0.1.0"
edition = "2021"
description = "Tauri plugin: feature idea → structured GitHub Issues via Claude AI"
license = "MIT"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri        = { version = "2", features = [] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
reqwest      = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio        = { version = "1", features = ["full"] }
keyring      = "3"
rusqlite     = { version = "0.32", features = ["bundled"] }
